# giti_super

./: .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  Makefile  README.md  Reorganize.md  build  config.json  database_supa.py  giti  giti_interactive.py  giti_interface.py  giti_power_simple.py  giti_powercharged.py  install.sh  make.sh  pe  pld_main.py  powered_g  powered_g.py  remove.sh  requirements.txt  run_song.py  update.py  versions_changelog.json
assets/: birthday.m4a
commands/: commands.json
include/: CommandManager.hpp  ConfigManager.hpp  ConfigReader.hpp  GitManager.hpp  GitRepoClass.hpp  ToolActionResolver.hpp  giti_parser.hpp  giti_parser_result.hpp
include/giti/cli/: parser.hpp  types.hpp
include/giti/commit/: messages.hpp
include/giti/config/: config.hpp
include/giti/git/: repository.hpp  types.hpp
include/giti/handlers/: commit_handler.hpp  tool_handler.hpp  utility_handler.hpp
jsons/: .giti.json  versions_changelog.json
modules/: abricot.py  argsParse.py  commit.py  configs.py  fetch_config.py  giti_interactive.py  powered_g.py  update.py
python/jsons/: .giti.json  versions_changelog.json
python/modules/: configs.py  update.py
src/: ConfigManager.cpp  ConfigReader.cpp  GitManager.cpp  GitRepoClass.cpp  ToolActionResolver.cpp  giti_parsers.cpp  main.cpp  parsing.cpp
src/cli/: parser.cpp
src/config/: Config.cpp  config.cpp
src/git/: repository.cpp  types.cpp
src/handlers/: commit_handler.cpp  tool_handler.cpp  utility_handler.cpp
